--- a/pom.xml
+++ b/pom.xml
@@ -125,8 +125,8 @@
         <asciidoctor.version>1.5.4-NEMESIS-RELEASE</asciidoctor.version>
         <asciidoctorj-diagram.version>1.3.1</asciidoctorj-diagram.version>
         <atmosphere.version>2.2.6</atmosphere.version>
-        <checkstyle-violation.ignore>RedundantThrows,NewlineAtEndOfFile,ParameterNumber,MethodLength,FileLength
-        </checkstyle-violation.ignore>
+        <checkstyle.violation.ignore>RedundantThrows,NewlineAtEndOfFile,ParameterNumber,MethodLength,FileLength
+        </checkstyle.violation.ignore>
         <codemodel.version>2.8.6</codemodel.version>
         <codemirror-webjars.version>5.1</codemirror-webjars.version>
         <commons-collections4.version>4.1</commons-collections4.version>
