Update hazelcast-hibernate to 52

--- a/pom.xml
+++ b/pom.xml
@@ -163,7 +163,7 @@
         <hibernate-hydrate.version>5.2.0</hibernate-hydrate.version>
         <!-- Remove once boot updates -->
         <!--hazelcast.version>3.7.2</hazelcast.version-->
-        <hazelcast-hibernate.version>1.2.2</hazelcast-hibernate.version>
+        <!--hibernate.version>1.2.2</hazelcast-hibernate.version-->
         <!--infinispan.version>8.1.0.Final</infinispan.version-->
         <java.version>1.8</java.version>
         <javamoney.version>1.1</javamoney.version>
@@ -660,11 +660,6 @@
                 <groupId>com.javaetmoi.core</groupId>
                 <artifactId>javaetmoi-hibernate5-hydrate</artifactId>
                 <version>${hibernate-hydrate.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>com.hazelcast</groupId>
-                <artifactId>hazelcast-hibernate52</artifactId>
-                <version>${hazelcast-hibernate.version}</version>
             </dependency>
             <dependency>
                 <groupId>org.infinispan</groupId>
